FLINK-4 - Adding required dependencies and setting up simple string transform stream

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ repositories {
 }
 
 dependencies {
+    implementation "org.apache.flink:flink-java:${flinkVersion}"
+    implementation "org.apache.flink:flink-streaming-java_2.12:${flinkVersion}"
+    implementation "org.apache.flink:flink-clients_2.12:${flinkVersion}"
+
+    testImplementation "org.apache.flink:flink-test-utils-junit:${flinkVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
